Update Github link
Update Github link to direct to correct GH account

--- a/config.yaml
+++ b/config.yaml
@@ -25,4 +25,4 @@ params:
   social:
     - icon: github
       name: Github
-      url: 'https://github.com/gohugoio'
+      url: 'https://github.com/ev0ha'
